--- a/ddiaz-portfolio/src/App.css
+++ b/ddiaz-portfolio/src/App.css
@@ -3,5 +3,5 @@
     margin: 0;
     padding: 0;
     font-family: 'Encode Sans Expanded', sans-serif;
-    background-color: rgba(255, 255, 255, 0.51);
+    background-color: rgba(255, 255, 255, );
 }
