--- a/ddiaz-portfolio/src/App.css
+++ b/ddiaz-portfolio/src/App.css
@@ -5,3 +5,8 @@
     font-family: 'Encode Sans Expanded', sans-serif;
     background-color: rgba(255, 255, 255, );
 }
+
+a{
+    text-decoration: none;
+
+}
